# songarr

./: .dockerignore  .gitignore  Cargo.toml  DEVLOG.md  README.md  config.example.toml  discord-remote-multiuser-plan.md  discord-remote-plan.md  listen-together-plan.md  songarr-artist-expansion-plan.md  songarr-offline-i18n-lyrics-plan.md  songarr-proxy-plan.md  songarr-recs-plan.md  songarr-wave-plan.md  songarr-wave-steps.md  sound-quality-plan.md  ui-ux-suggestions.md
apps/songarr_wave/: .gitignore  README.md  pubspec.yaml
apps/songarr_wave/android/: build.gradle.kts
apps/songarr_wave/android/app/: build.gradle.kts
apps/songarr_wave/android/app/src/main/: AndroidManifest.xml
apps/songarr_wave/android/app/src/main/kotlin/com/example/songarr_wave/: MainActivity.kt
apps/songarr_wave/ios/Runner/: Info.plist
apps/songarr_wave/ios/Runner.xcodeproj/: project.pbxproj
apps/songarr_wave/lib/: api.dart  controller.dart  desktop_audio.dart  desktop_audio_io.dart  desktop_audio_stub.dart  download_manager.dart  download_types.dart  downloader.dart  downloader_io.dart  downloader_stub.dart  main.dart  media_session.dart  media_session_stub.dart  media_session_web.dart  player_screens.dart  screens.dart  shell.dart  theme.dart  widgets.dart
apps/songarr_wave/linux/: CMakeLists.txt
apps/songarr_wave/linux/flutter/: generated_plugins.cmake
apps/songarr_wave/linux/runner/: my_application.cc
apps/songarr_wave/macos/Runner.xcodeproj/: project.pbxproj
apps/songarr_wave/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
apps/songarr_wave/macos/Runner/Configs/: AppInfo.xcconfig
apps/songarr_wave/test/: widget_test.dart
apps/songarr_wave/web/: index.html  manifest.json
apps/songarr_wave/windows/: CMakeLists.txt
apps/songarr_wave/windows/flutter/: generated_plugins.cmake
apps/songarr_wave/windows/runner/: Runner.rc  main.cpp
discord-bot/: Cargo.toml  README.md
discord-bot/src/: commands.rs  config.rs  main.rs  playback.rs  remote.rs  songarr.rs  store.rs
docker/: .env.example  Dockerfile  Dockerfile.bot  docker-compose.example.yml
migrations/: 0001_init.sql  0002_resolution_cache.sql  0003_recommendations.sql  0004_artist_expansion.sql  0005_wave_feedback.sql  0006_lyrics_cache.sql  0007_user_activity.sql  0008_remote_control.sql  0009_remote_state_rev.sql  0010_remote_state_busy.sql  0011_user_profile.sql
scripts/: songarr-vk  songarr-yandex
src/: config.rs  db.rs  ingest_url.rs  jobs.rs  lib.rs  lyrics.rs  main.rs  pending.rs  valbum.rs  vk.rs  vtrack.rs  yandex.rs
src/catalog/: deezer.rs  mod.rs  yandex.rs
src/ingest/: mod.rs
src/proxy/: album.rs  artist.rs  coverart.rs  lyrics.rs  mod.rs  passthrough.rs  playlists.rs  scrobble.rs  search.rs  similar.rs  song.rs  stream.rs  wave.rs
src/proxy/wave/: activity.rs  imports.rs  listen.rs  recommendations.rs  remote.rs
src/recs/: deezer.rs  lastfm.rs  merge.rs  mod.rs  yandex.rs  ytm.rs
src/resolve/: innertube.rs  mod.rs
src/subsonic/: auth.rs  mod.rs  types.rs
tests/: artist_expansion.rs  ingest.rs  lyrics.rs  passthrough.rs  recommendations.rs  recommendations_support.rs  virtual_search.rs  virtual_stream.rs
tests/common/: mod.rs
tests/harness/: compose.yml  down.sh  seed.sh  up.sh
web/: README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
web/src/: App.tsx  api.ts  auth.test.ts  auth.ts  components.tsx  downloads.test.ts  downloads.tsx  i18n.test.ts  i18n.tsx  icons.tsx  index.css  lyrics-ui.test.ts  lyrics-ui.ts  main.tsx  nav.tsx  now-playing.tsx  online.ts  playbar.tsx  player-context.ts  player-stars.ts  player-utils.test.ts  player-utils.ts  player.tsx  quality.test.ts  quality.ts  reasons.test.ts  reasons.ts  types.ts  views-downloads.tsx  views-imports.tsx  views-settings.tsx  views.tsx
web/src-tauri/: Cargo.toml  tauri.conf.json
web/src-tauri/capabilities/: default.json
web/src-tauri/icons/: icon.icns
web/src-tauri/src/: main.rs
