[package]
name = "songarr-proxy"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Subsonic/OpenSubsonic reverse proxy for Navidrome with on-demand external track streaming and ingest"

[dependencies]
anyhow = "1"
axum = { version = "0.8", features = ["macros"] }
deunicode = "1"
md5 = "0.7"
quick-xml = "0.38"
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "stream",
    "http2",
    "json",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strsim = "0.11"
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "tls-rustls",
    "sqlite",
    "migrate",
    "macros",
] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["io"] }
toml = "0.8"
tracing = "0.1"
url = "2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
lofty = "0.24.0"

[dev-dependencies]

[profile.release]
strip = true
lto = "thin"
