[package]
name = "songarr-discord"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Discord bot that plays music from a Songarr/Subsonic server in voice channels"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync"] }
async-trait = "0.1"
poise = "0.6"
songbird = { version = "0.4", features = ["builtin-queue"] }
symphonia = { version = "0.5", features = ["mp3", "isomp4", "aac", "alac"] }
# Pinned to 0.11 to match songbird's reqwest so the voice input Client type
# unifies (songbird 0.4 still uses reqwest 0.11).
reqwest = { version = "0.11", default-features = false, features = [
    "rustls-tls",
    "stream",
    "json",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
md5 = "0.7"
rand = "0.8"
url = "2"
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "tls-rustls",
    "sqlite",
    "migrate",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
