[package]
name = "songarr-discord"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Discord bot that plays music from a Songarr/Subsonic server in voice channels"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync"] }
async-trait = "0.1"
poise = "0.6"
# 0.6 implements Discord's DAVE (E2EE voice) protocol via the `davey` dep in its
# `driver` feature; Discord now closes voice with code 4017 ("E2EE/DAVE protocol
# required") against clients that lack it. Still targets serenity 0.12 (poise) +
# reqwest 0.12, so this is a version bump, not a stack swap.
songbird = { version = "0.6", features = ["builtin-queue"] }
symphonia = { version = "0.5", features = ["mp3", "isomp4", "aac", "alac"] }
# Matches songbird 0.6's reqwest so the voice input (HttpRequest) Client type
# unifies — no second TLS stack / client type in the graph.
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "stream",
    "json",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
md5 = "0.7"
rand = "0.8"
url = "2"
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "tls-rustls",
    "sqlite",
    "migrate",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
