# Standalone (not part of the repo's root workspace, which only builds the
# proxy + discord-bot). The empty [workspace] table below keeps cargo from
# trying to fold this desktop shell into that workspace.
[package]
name = "songarr-wave-desktop"
version = "0.1.0"
description = "Songarr Wave desktop (Tauri shell over the React web client)"
edition = "2021"

[workspace]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
